kubernetes/nexus-helm-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2048m"
spec:
  rules:
    - host: nexus.intranet.securonix.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-nexus-repository-manager
                port:
                  number: 8081
